[package]
name = "parrot"
version = "0.1.0"
edition = "2021"
authors = ["David Macpherson <david.allan.macpherson@gmail.com>"]
description = "I am in pain"
license = "MIT/Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embedded-serial = "0.5.0"
serialport = "4.3.0"
wasm-pack = "0.12.1"
